fix: package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "navigation",
+    "name": "@gravity-ui/navigation",
     "version": "0.0.1",
     "description": "Gravity UI Navigation components",
     "license": "MIT",
