--- a/package.json
+++ b/package.json
@@ -79,6 +79,11 @@
         "typescript": "^4.5.5",
         "ts-jest": "^28.0.0"
     },
+    "peerDependencies": {
+        "@gravity-ui/uikit": "^3.0.2",
+        "bem-cn-lite": "^4.0.0",
+        "react": "^16.0.0"
+    },
     "nano-staged": {
         "*.{scss}": [
             "stylelint --fix --quiet"
