--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
         "tslib": "^2.4.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.18.10",
         "@commitlint/cli": "^17.0.0",
         "@commitlint/config-conventional": "^17.0.0",
-        "@babel/core": "^7.18.10",
         "@gravity-ui/eslint-config": "^1.0.0",
         "@gravity-ui/prettier-config": "^1.0.0",
         "@gravity-ui/stylelint-config": "^1.0.0",
@@ -55,6 +55,7 @@
         "@storybook/preset-scss": "^1.0.3",
         "@storybook/react": "^6.5.10",
         "@storybook/testing-library": "0.0.13",
+        "@svgr/rollup": "^6.4.0",
         "@types/react": "^16.14.28",
         "@types/react-transition-group": "^4.4.1",
         "@types/react-virtualized-auto-sizer": "^1.0.0",
@@ -77,8 +78,8 @@
         "storybook-preset-inline-svg": "^1.0.1",
         "stylelint": "^14.9.1",
         "svg-inline-loader": "^0.8.2",
-        "typescript": "^4.5.5",
-        "ts-jest": "^28.0.0"
+        "ts-jest": "^28.0.0",
+        "typescript": "^4.5.5"
     },
     "peerDependencies": {
         "@gravity-ui/uikit": "^3.0.2",
