--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
         "rollup": "^2.75.7",
         "rollup-plugin-json": "^4.0.0",
         "rollup-plugin-peer-deps-external": "^2.2.4",
-        "rollup-plugin-scss": "^3.0.0",
+        "rollup-plugin-postcss": "^4.0.2",
         "sass": "^1.49.7",
         "sass-loader": "^10.2.1",
         "storybook-preset-inline-svg": "^1.0.1",
