--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "main": "build/cjs/index.js",
     "module": "build/esm/index.js",
-    "types": "build/esm/types/index.d.ts",
+    "types": "build/esm/index.d.ts",
     "sideEffects": [
         "*.css",
         "*.scss"
