--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "prepublishOnly": "npm run build"
     },
     "dependencies": {
+        "@gravity-ui/icons": "^2.2.0",
         "react-transition-group": "^4.4.1",
         "tslib": "^2.4.0"
     },
@@ -84,6 +85,7 @@
     },
     "peerDependencies": {
         "@gravity-ui/uikit": "^4.1.0",
+        "@gravity-ui/icons": "^2.2.0",
         "react": "^16.0.0 || ^17.0.0 || ^18.0.0",
         "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0"
     },
