--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@commitlint/cli": "^17.0.0",
         "@commitlint/config-conventional": "^17.0.0",
         "@gravity-ui/eslint-config": "^1.0.0",
+        "@gravity-ui/icons": "^2.2.0",
         "@gravity-ui/prettier-config": "^1.0.0",
         "@gravity-ui/stylelint-config": "^1.0.0",
         "@gravity-ui/tsconfig": "^1.0.0",
@@ -84,6 +85,7 @@
     },
     "peerDependencies": {
         "@gravity-ui/uikit": "^4.1.0",
+        "@gravity-ui/icons": "^2.2.0",
         "react": "^16.0.0 || ^17.0.0 || ^18.0.0",
         "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0"
     },
