--- a/package.json
+++ b/package.json
@@ -1,103 +1,111 @@
 {
-    "name": "@gravity-ui/navigation",
-    "version": "0.10.1",
-    "description": "Gravity UI Navigation components",
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/gravity-ui/navigation"
-    },
-    "main": "build/cjs/index.js",
-    "module": "build/esm/index.js",
-    "types": "build/esm/index.d.ts",
-    "sideEffects": [
-        "*.css",
-        "*.scss"
+  "name": "@gravity-ui/navigation",
+  "version": "0.10.1",
+  "description": "Gravity UI Navigation components",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gravity-ui/navigation"
+  },
+  "main": "build/cjs/index.js",
+  "module": "build/esm/index.js",
+  "types": "build/esm/index.d.ts",
+  "sideEffects": [
+    "*.css",
+    "*.scss"
+  ],
+  "files": [
+    "build"
+  ],
+  "scripts": {
+    "prepare": "husky install",
+    "typecheck": "tsc --noEmit",
+    "test": "jest --passWithNoTests",
+    "build": "rimraf build && rollup -c",
+    "lint:js": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "lint:styles": "stylelint '{styles,src}/**/*.scss'",
+    "lint:prettier": "prettier --check '**/*.md'",
+    "lint": "run-p lint:*",
+    "build-storybook": "storybook build",
+    "start": "TS_NODE_PROJECT=.storybook/tsconfig.json storybook dev",
+    "prepublishOnly": "npm run build"
+  },
+  "dependencies": {
+    "react-transition-group": "^4.4.1",
+    "tslib": "^2.4.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@commitlint/cli": "^17.0.0",
+    "@commitlint/config-conventional": "^17.0.0",
+    "@doc-tools/transform": "^3.1.0",
+    "@gravity-ui/components": "^2.0.0",
+    "@gravity-ui/eslint-config": "^1.0.0",
+    "@gravity-ui/icons": "^2.2.0",
+    "@gravity-ui/prettier-config": "^1.0.0",
+    "@gravity-ui/stylelint-config": "^1.0.0",
+    "@gravity-ui/tsconfig": "^1.0.0",
+    "@gravity-ui/uikit": "^5.1.0",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "@storybook/addon-actions": "^7.1.0",
+    "@storybook/addon-essentials": "^7.1.0",
+    "@storybook/addon-interactions": "^7.1.0",
+    "@storybook/addon-links": "^7.1.0",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^7.1.0",
+    "@storybook/react-webpack5": "^7.1.0",
+    "@storybook/testing-library": "0.2.0",
+    "@svgr/rollup": "^6.4.0",
+    "@types/react": "^16.14.28",
+    "@types/react-transition-group": "^4.4.1",
+    "babel-loader": "^8.2.5",
+    "eslint": "^8.18.0",
+    "eslint-plugin-testing-library": "^5.5.1",
+    "husky": "^8.0.0",
+    "jest": "^28.0.0",
+    "nano-staged": "^0.6.0",
+    "npm-run-all": "^4.0.0",
+    "prettier": "^2.7.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.75.7",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "sass": "^1.49.7",
+    "sass-loader": "^10.2.1",
+    "storybook": "^7.1.0",
+    "storybook-preset-inline-svg": "^1.0.1",
+    "stylelint": "^14.9.1",
+    "svg-inline-loader": "^0.8.2",
+    "ts-jest": "^28.0.0",
+    "typescript": "^4.5.5"
+  },
+  "peerDependencies": {
+    "@gravity-ui/components": "^2.0.0",
+    "@gravity-ui/icons": "^2.2.0",
+    "@gravity-ui/uikit": "^5.1.0",
+    "react": "^16.0.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0"
+  },
+  "overrides": {
+    "webpack": "^5.88.2"
+  },
+  "nano-staged": {
+    "*.{scss}": [
+      "stylelint --fix --quiet"
     ],
-    "files": [
-        "build"
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix --quiet"
     ],
-    "scripts": {
-        "prepare": "husky install",
-        "typecheck": "tsc --noEmit",
-        "test": "jest --passWithNoTests",
-        "build": "rimraf build && rollup -c",
-        "lint:js": "eslint src --ext .js,.jsx,.ts,.tsx",
-        "lint:styles": "stylelint '{styles,src}/**/*.scss'",
-        "lint:prettier": "prettier --check '**/*.md'",
-        "lint": "run-p lint:*",
-        "build-storybook": "build-storybook",
-        "start": "TS_NODE_PROJECT=.storybook/tsconfig.json start-storybook",
-        "prepublishOnly": "npm run build"
-    },
-    "dependencies": {
-        "react-transition-group": "^4.4.1",
-        "tslib": "^2.4.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.18.10",
-        "@commitlint/cli": "^17.0.0",
-        "@commitlint/config-conventional": "^17.0.0",
-        "@gravity-ui/eslint-config": "^1.0.0",
-        "@gravity-ui/icons": "^2.2.0",
-        "@gravity-ui/prettier-config": "^1.0.0",
-        "@gravity-ui/stylelint-config": "^1.0.0",
-        "@gravity-ui/tsconfig": "^1.0.0",
-        "@gravity-ui/uikit": "^4.1.0",
-        "@rollup/plugin-commonjs": "^22.0.0",
-        "@rollup/plugin-node-resolve": "^13.3.0",
-        "@rollup/plugin-typescript": "^8.3.3",
-        "@storybook/addon-actions": "^6.5.10",
-        "@storybook/addon-essentials": "^6.5.10",
-        "@storybook/addon-interactions": "^6.5.10",
-        "@storybook/addon-links": "^6.5.10",
-        "@storybook/builder-webpack4": "^6.5.10",
-        "@storybook/manager-webpack4": "^6.5.10",
-        "@storybook/preset-scss": "^1.0.3",
-        "@storybook/react": "^6.5.10",
-        "@storybook/testing-library": "0.0.13",
-        "@svgr/rollup": "^6.4.0",
-        "@types/react": "^16.14.28",
-        "@types/react-transition-group": "^4.4.1",
-        "@types/react-virtualized-auto-sizer": "^1.0.0",
-        "babel-loader": "^8.2.5",
-        "eslint": "^8.18.0",
-        "eslint-plugin-testing-library": "^5.5.1",
-        "husky": "^8.0.0",
-        "jest": "^28.0.0",
-        "nano-staged": "^0.6.0",
-        "npm-run-all": "^4.0.0",
-        "prettier": "^2.7.1",
-        "react": "^16.14.0",
-        "react-dom": "^16.14.0",
-        "rimraf": "^3.0.2",
-        "rollup": "^2.75.7",
-        "rollup-plugin-json": "^4.0.0",
-        "rollup-plugin-peer-deps-external": "^2.2.4",
-        "rollup-plugin-postcss": "^4.0.2",
-        "sass": "^1.49.7",
-        "sass-loader": "^10.2.1",
-        "storybook-preset-inline-svg": "^1.0.1",
-        "stylelint": "^14.9.1",
-        "svg-inline-loader": "^0.8.2",
-        "ts-jest": "^28.0.0",
-        "typescript": "^4.5.5"
-    },
-    "peerDependencies": {
-        "@gravity-ui/uikit": "^4.1.0",
-        "@gravity-ui/icons": "^2.2.0",
-        "react": "^16.0.0 || ^17.0.0 || ^18.0.0",
-        "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0"
-    },
-    "nano-staged": {
-        "*.{scss}": [
-            "stylelint --fix --quiet"
-        ],
-        "*.{js,jsx,ts,tsx}": [
-            "eslint --fix --quiet"
-        ],
-        "*.md": [
-            "prettier --write"
-        ]
-    }
+    "*.md": [
+      "prettier --write"
+    ]
+  }
 }
