--- a/.github/workflows/main-preview.yml
+++ b/.github/workflows/main-preview.yml
@@ -21,7 +21,7 @@ jobs:
       run: npm ci
       shell: bash
     - name: Build Storybook
-      run: npx build-storybook
+      run: npx sb build
       shell: bash
       env:
         TS_NODE_PROJECT: .storybook/tsconfig.json
