--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "@gravity-ui/i18n": "^1.1.0",
     "react-transition-group": "^4.4.1",
     "tslib": "^2.4.0"
   },
