--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@types/react-transition-group": "^4.4.1",
     "babel-loader": "^8.2.5",
     "eslint": "^8.18.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.5.1",
     "husky": "^8.0.0",
     "jest": "^28.0.0",
