fix: rollup config with @rollup/plugin-typescript

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@gravity-ui/uikit": "^5.14.0",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@storybook/addon-actions": "^7.1.0",
     "@storybook/addon-essentials": "^7.1.0",
     "@storybook/addon-interactions": "^7.1.0",
@@ -80,7 +81,6 @@
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-typescript2": "^0.36.0",
     "sass": "^1.49.7",
     "sass-loader": "^10.2.1",
     "storybook": "^7.1.0",
