--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "type": "git",
     "url": "https://github.com/gravity-ui/navigation"
   },
-  "main": "build/cjs/index.js",
-  "module": "build/esm/index.js",
+  "main": "build/cjs",
+  "module": "build/esm",
   "types": "build/esm/index.d.ts",
   "sideEffects": [
     "*.css",
