--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "@commitlint/config-conventional": "^18.6.0",
     "@doc-tools/transform": "^3.11.0",
     "@gravity-ui/components": "^2.0.0",
-    "@gravity-ui/eslint-config": "^1.0.0",
+    "@gravity-ui/eslint-config": "^3.1.1",
     "@gravity-ui/icons": "^2.2.0",
     "@gravity-ui/prettier-config": "^1.0.0",
-    "@gravity-ui/stylelint-config": "^1.0.0",
+    "@gravity-ui/stylelint-config": "^4.0.1",
     "@gravity-ui/tsconfig": "^1.0.0",
     "@gravity-ui/uikit": "^5.14.0",
     "@rollup/plugin-commonjs": "^22.0.0",
@@ -62,16 +62,18 @@
     "@storybook/react-webpack5": "^7.1.0",
     "@storybook/testing-library": "0.2.0",
     "@svgr/rollup": "^6.4.0",
+    "@types/lodash": "^4.14.202",
     "@types/react": "^16.14.28",
     "@types/react-transition-group": "^4.4.1",
-    "eslint": "^8.18.0",
+    "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.5.1",
+    "eslint-plugin-testing-library": "^6.2.0",
     "husky": "^8.0.0",
     "jest": "^28.0.0",
     "nano-staged": "^0.6.0",
     "npm-run-all": "^4.0.0",
-    "prettier": "^2.7.1",
+    "prettier": "^3.2.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "rimraf": "^3.0.2",
@@ -83,7 +85,7 @@
     "sass-loader": "^10.2.1",
     "storybook": "^7.1.0",
     "storybook-preset-inline-svg": "^1.0.1",
-    "stylelint": "^14.9.1",
+    "stylelint": "^15.11.0",
     "svg-inline-loader": "^0.8.2",
     "ts-jest": "^28.0.0",
     "typescript": "^4.5.5"
