feat!: update uikit 6, components 2 and other deps (#185)
* chore: remove odd @gravity-ui/i18n

* chore: update @babel, @commitlint, @doc-tools deps

* chore: update eslint, prettier

* feat: exclude story typings from build

* chore: update @storybook

* chore: update husky

* chore: update uikit, components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,18 +4,15 @@
     "jsx": "react",
     "module": "esnext",
     "baseUrl": ".",
-    "allowJs": true,
     "resolveJsonModule": true,
     "outDir": "build",
     "declaration": true
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": [
     "node_modules",
     "build",
+    "**/__stories__",
     "**/__tests__",
     "**/*.test.ts",
     "**/*.test.tsx"
