--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build"
   ],
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "typecheck": "tsc --noEmit",
     "test": "jest --passWithNoTests",
     "build": "rimraf build && rollup -c",
@@ -31,49 +31,49 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@gravity-ui/i18n": "^1.1.0",
     "react-transition-group": "^4.4.1",
     "tslib": "^2.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@babel/preset-env": "^7.22.9",
-    "@babel/preset-react": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.5",
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@bem-react/classname": "^1.6.0",
-    "@commitlint/cli": "^17.0.0",
-    "@commitlint/config-conventional": "^17.0.0",
-    "@doc-tools/transform": "^3.1.0",
-    "@gravity-ui/components": "^2.0.0",
-    "@gravity-ui/eslint-config": "^1.0.0",
-    "@gravity-ui/icons": "^2.2.0",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
+    "@doc-tools/transform": "^3.11.0",
+    "@gravity-ui/components": "^3.0.0",
+    "@gravity-ui/eslint-config": "^3.1.1",
+    "@gravity-ui/icons": "^2.8.1",
     "@gravity-ui/prettier-config": "^1.0.0",
-    "@gravity-ui/stylelint-config": "^1.0.0",
+    "@gravity-ui/stylelint-config": "^4.0.1",
     "@gravity-ui/tsconfig": "^1.0.0",
-    "@gravity-ui/uikit": "^5.14.0",
+    "@gravity-ui/uikit": "^6.0.0",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
-    "@storybook/addon-actions": "^7.1.0",
-    "@storybook/addon-essentials": "^7.1.0",
-    "@storybook/addon-interactions": "^7.1.0",
-    "@storybook/addon-links": "^7.1.0",
+    "@storybook/addon-actions": "^7.6.13",
+    "@storybook/addon-essentials": "^7.6.13",
+    "@storybook/addon-interactions": "^7.6.13",
+    "@storybook/addon-links": "^7.6.13",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^7.1.0",
-    "@storybook/react-webpack5": "^7.1.0",
+    "@storybook/react": "^7.6.13",
+    "@storybook/react-webpack5": "^7.6.13",
     "@storybook/testing-library": "0.2.0",
     "@svgr/rollup": "^6.4.0",
+    "@types/lodash": "^4.14.202",
     "@types/react": "^16.14.28",
     "@types/react-transition-group": "^4.4.1",
-    "babel-loader": "^8.2.5",
-    "eslint": "^8.18.0",
+    "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.5.1",
-    "husky": "^8.0.0",
+    "eslint-plugin-testing-library": "^6.2.0",
+    "husky": "^9.0.9",
     "jest": "^28.0.0",
     "nano-staged": "^0.6.0",
     "npm-run-all": "^4.0.0",
-    "prettier": "^2.7.1",
+    "prettier": "^3.2.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "rimraf": "^3.0.2",
@@ -83,18 +83,18 @@
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.49.7",
     "sass-loader": "^10.2.1",
-    "storybook": "^7.1.0",
+    "storybook": "^7.6.13",
     "storybook-preset-inline-svg": "^1.0.1",
-    "stylelint": "^14.9.1",
+    "stylelint": "^15.11.0",
     "svg-inline-loader": "^0.8.2",
     "ts-jest": "^28.0.0",
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
     "@bem-react/classname": "^1.6.0",
-    "@gravity-ui/components": "^2.0.0",
+    "@gravity-ui/components": "^3.0.0",
     "@gravity-ui/icons": "^2.2.0",
-    "@gravity-ui/uikit": "^5.1.0",
+    "@gravity-ui/uikit": "^6.0.0",
     "react": "^16.0.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0"
   },
