--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prepare": "husky",
     "typecheck": "tsc --noEmit",
     "test": "jest --passWithNoTests",
+    "test-storybook": "test-storybook --url ${PR_PREVIEW_URL:-http://localhost:7007}",
     "build": "rimraf build && rollup -c",
     "lint:js": "eslint src --ext .js,.jsx,.ts,.tsx",
     "lint:styles": "stylelint '{styles,src}/**/*.scss'",
@@ -53,6 +54,7 @@
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
+    "@storybook/addon-a11y": "^7.6.18",
     "@storybook/addon-actions": "^7.6.13",
     "@storybook/addon-essentials": "^7.6.13",
     "@storybook/addon-interactions": "^7.6.13",
@@ -60,12 +62,14 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^7.6.13",
     "@storybook/react-webpack5": "^7.6.17",
+    "@storybook/test-runner": "^0.17.0",
     "@storybook/testing-library": "0.2.0",
     "@svgr/rollup": "^6.4.0",
     "@types/lodash": "^4.14.202",
     "@types/react": "^16.14.28",
     "@types/react-transition-group": "^4.4.1",
     "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "axe-playwright": "^2.0.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^6.2.0",
