feat: some a11y issues fixed (#230)
* feat: fixing some a11y issues

--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "prepare": "husky",
     "typecheck": "tsc --noEmit",
     "test": "jest --passWithNoTests",
+    "test-storybook": "test-storybook --url ${PR_PREVIEW_URL:-http://localhost:7008}",
     "build": "rimraf build && rollup -c",
     "lint:js": "eslint src --ext .js,.jsx,.ts,.tsx",
     "lint:styles": "stylelint '{styles,src}/**/*.scss'",
     "lint:prettier": "prettier --check '**/*.md'",
     "lint": "run-p lint:*",
     "build-storybook": "storybook build",
-    "start": "TS_NODE_PROJECT=.storybook/tsconfig.json storybook dev",
+    "start": "TS_NODE_PROJECT=.storybook/tsconfig.json storybook dev -p 7008",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
@@ -49,10 +50,11 @@
     "@gravity-ui/prettier-config": "^1.0.0",
     "@gravity-ui/stylelint-config": "^4.0.1",
     "@gravity-ui/tsconfig": "^1.0.0",
-    "@gravity-ui/uikit": "^6.0.0",
+    "@gravity-ui/uikit": "^6.13.0",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
+    "@storybook/addon-a11y": "^7.6.18",
     "@storybook/addon-actions": "^7.6.13",
     "@storybook/addon-essentials": "^7.6.13",
     "@storybook/addon-interactions": "^7.6.13",
@@ -60,12 +62,14 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^7.6.13",
     "@storybook/react-webpack5": "^7.6.17",
+    "@storybook/test-runner": "^0.17.0",
     "@storybook/testing-library": "0.2.0",
     "@svgr/rollup": "^6.4.0",
     "@types/lodash": "^4.14.202",
     "@types/react": "^16.14.28",
     "@types/react-transition-group": "^4.4.1",
     "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "axe-playwright": "^2.0.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^6.2.0",
@@ -94,7 +98,7 @@
     "@bem-react/classname": "^1.6.0",
     "@gravity-ui/components": "^3.0.0",
     "@gravity-ui/icons": "^2.2.0",
-    "@gravity-ui/uikit": "^6.0.0",
+    "@gravity-ui/uikit": "^6.13.0",
     "react": "^16.0.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0"
   },
