--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
-        run: npm run playwright:docker
+        run: npm run playwright
         env:
           CI: 'true'
       - name: Upload Playwright playwright report to GitHub Actions Artifacts
