--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "tslib": "^2.4.0"
   },
   "devDependencies": {
-    "@andylacko/vite-svg-react-loader": "^3.0.16",
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
@@ -102,7 +101,9 @@
     "stylelint": "^15.11.0",
     "svg-inline-loader": "^0.8.2",
     "ts-jest": "^28.0.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "vite-plugin-commonjs": "^0.10.1",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "peerDependencies": {
     "@bem-react/classname": "^1.6.0",
