--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/react-transition-group": "^4.4.10",
     "@types/react-virtualized-auto-sizer": "^1.0.4",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "axe-playwright": "^2.0.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
