--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/react-transition-group": "^4.4.10",
     "@types/react-virtualized-auto-sizer": "^1.0.4",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "axe-playwright": "^2.0.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -94,7 +95,8 @@
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "sass": "^1.49.7",
+    "rollup-plugin-styles": "^4.0.0",
+    "sass": "^1.79.3",
     "sass-loader": "^10.2.1",
     "storybook": "^7.6.13",
     "storybook-preset-inline-svg": "^1.0.1",
