--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "https://github.com/gravity-ui/navigation"
   },
+  "dev-mark": "2 add esm and cjs",
   "main": "build/cjs",
   "module": "build/esm",
   "types": "build/types/index.d.ts",
