--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/gravity-ui/navigation"
   },
-  "dev-mark": "replace lodash",
+  "dev-mark": "correct svg bundling",
   "main": "build/cjs/index.cjs",
   "module": "build/esm/index.mjs",
   "types": "build/types/index.d.ts",
@@ -101,6 +101,7 @@
     "react-dom": "^18.3.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.75.7",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
@@ -114,8 +115,7 @@
     "typescript": "^4.5.5",
     "vite": "^5.4.7",
     "vite-plugin-dts": "^4.2.1",
-    "vite-plugin-specifier": "^1.0.1",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-specifier": "^1.0.1"
   },
   "peerDependencies": {
     "@bem-react/classname": "^1.6.0",
