--- a/.github/workflows/pr-playwright-report.yml
+++ b/.github/workflows/pr-playwright-report.yml
@@ -15,8 +15,8 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v4
         with:
-          workflow: ${{ github.event.workflow_run.workflow_id }}
-          run_id: ${{ github.event.workflow_run.id }}
+          github-token: ${{ secrets.GRAVITY_UI_BOT_GITHUB_TOKEN }}
+          run-id: ${{ github.event.workflow_run.id }}
       - name: Extract PR Number
         id: pr
         run: echo "::set-output name=id::$(<pr/pr-id.txt)"
