--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@bem-react/classname": "^1.6.0",
+    "@chromatic-com/storybook": "^3.2.4",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@doc-tools/transform": "^3.11.0",
@@ -63,16 +64,18 @@
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
-    "@storybook/addon-a11y": "^7.6.18",
-    "@storybook/addon-actions": "^7.6.13",
-    "@storybook/addon-essentials": "^7.6.13",
-    "@storybook/addon-interactions": "^7.6.13",
-    "@storybook/addon-links": "^7.6.13",
+    "@storybook/addon-a11y": "^8.5.0",
+    "@storybook/addon-actions": "^8.5.0",
+    "@storybook/addon-essentials": "^8.5.0",
+    "@storybook/addon-interactions": "^8.5.0",
+    "@storybook/addon-links": "^8.5.0",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.5",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^7.6.13",
-    "@storybook/react-webpack5": "^7.6.17",
+    "@storybook/react": "^8.5.0",
+    "@storybook/react-webpack5": "^8.5.0",
+    "@storybook/test": "^8.5.0",
     "@storybook/test-runner": "^0.17.0",
-    "@storybook/testing-library": "0.2.0",
+    "@storybook/theming": "^8.5.0",
     "@svgr/rollup": "^6.4.0",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.3.3",
@@ -97,7 +100,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.49.7",
     "sass-loader": "^10.2.1",
-    "storybook": "^7.6.13",
+    "storybook": "^8.5.0",
     "storybook-preset-inline-svg": "^1.0.1",
     "stylelint": "^15.11.0",
     "svg-inline-loader": "^0.8.2",
