--- a/package.json
+++ b/package.json
@@ -39,71 +39,74 @@
     "playwright:docker:clear-cache": "./scripts/playwright-docker.sh clear-cache"
   },
   "dependencies": {
-    "react-transition-group": "^4.4.1",
-    "tslib": "^2.4.0"
+    "react-transition-group": "^4.4.5",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@bem-react/classname": "^1.6.0",
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
+    "@chromatic-com/storybook": "^3.2.4",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@doc-tools/transform": "^3.11.0",
     "@gravity-ui/components": "^3.0.0",
-    "@gravity-ui/eslint-config": "^3.1.1",
+    "@gravity-ui/eslint-config": "^3.3.0",
     "@gravity-ui/icons": "^2.8.1",
     "@gravity-ui/prettier-config": "^1.0.0",
     "@gravity-ui/stylelint-config": "^4.0.1",
     "@gravity-ui/tsconfig": "^1.0.0",
     "@gravity-ui/uikit": "^6.15.0",
-    "@playwright/experimental-ct-react": "^1.45.3",
-    "@playwright/test": "^1.45.3",
+    "@playwright/experimental-ct-react": "^1.49.1",
+    "@playwright/test": "^1.49.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
-    "@storybook/addon-a11y": "^7.6.18",
-    "@storybook/addon-actions": "^7.6.13",
-    "@storybook/addon-essentials": "^7.6.13",
-    "@storybook/addon-interactions": "^7.6.13",
-    "@storybook/addon-links": "^7.6.13",
+    "@storybook/addon-a11y": "^8.5.0",
+    "@storybook/addon-actions": "^8.5.0",
+    "@storybook/addon-essentials": "^8.5.0",
+    "@storybook/addon-interactions": "^8.5.0",
+    "@storybook/addon-links": "^8.5.0",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.5",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^7.6.13",
-    "@storybook/react-webpack5": "^7.6.17",
+    "@storybook/react": "^8.5.0",
+    "@storybook/react-webpack5": "^8.5.0",
+    "@storybook/test": "^8.5.0",
     "@storybook/test-runner": "^0.17.0",
-    "@storybook/testing-library": "0.2.0",
+    "@storybook/theming": "^8.5.0",
     "@svgr/rollup": "^6.4.0",
-    "@types/lodash": "^4.14.202",
-    "@types/react": "^18.3.3",
-    "@types/react-transition-group": "^4.4.10",
+    "@types/lodash": "^4.17.14",
+    "@types/react": "^18.3.18",
+    "@types/react-transition-group": "^4.4.12",
     "@types/react-virtualized-auto-sizer": "^1.0.4",
-    "@vitejs/plugin-react": "^4.3.1",
-    "axe-playwright": "^2.0.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^6.2.0",
-    "husky": "^9.0.9",
+    "@vitejs/plugin-react": "^4.3.4",
+    "axe-playwright": "^2.0.3",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-testing-library": "^6.5.0",
+    "husky": "^9.1.7",
     "jest": "^28.0.0",
     "nano-staged": "^0.6.0",
     "npm-run-all": "^4.0.0",
-    "prettier": "^3.2.5",
+    "prettier": "^3.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "rimraf": "^3.0.2",
+    "rimraf": "^6.0.1",
     "rollup": "^2.75.7",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "sass": "^1.49.7",
-    "sass-loader": "^10.2.1",
-    "storybook": "^7.6.13",
+    "sass": "^1.83.4",
+    "sass-loader": "^10.5.2",
+    "storybook": "^8.5.0",
     "storybook-preset-inline-svg": "^1.0.1",
     "stylelint": "^15.11.0",
     "svg-inline-loader": "^0.8.2",
     "ts-jest": "^28.0.0",
     "typescript": "^4.5.5",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.3.0"
   },
   "peerDependencies": {
     "@bem-react/classname": "^1.6.0",
