feat!: update uikit@7, components@3

--- a/package.json
+++ b/package.json
@@ -52,13 +52,13 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@doc-tools/transform": "^3.11.0",
-    "@gravity-ui/components": "^3.0.0",
+    "@gravity-ui/components": "^4.0.0-beta.3",
     "@gravity-ui/eslint-config": "^3.3.0",
     "@gravity-ui/icons": "^2.8.1",
     "@gravity-ui/prettier-config": "^1.0.0",
     "@gravity-ui/stylelint-config": "^4.0.1",
     "@gravity-ui/tsconfig": "^1.0.0",
-    "@gravity-ui/uikit": "^6.15.0",
+    "@gravity-ui/uikit": "^7.0.0-beta.5",
     "@playwright/experimental-ct-react": "^1.49.1",
     "@playwright/test": "^1.49.1",
     "@rollup/plugin-commonjs": "^28.0.2",
@@ -110,9 +110,9 @@
   },
   "peerDependencies": {
     "@bem-react/classname": "^1.6.0",
-    "@gravity-ui/components": "^3.0.0",
+    "@gravity-ui/components": "^4.0.0-beta.3",
     "@gravity-ui/icons": "^2.2.0",
-    "@gravity-ui/uikit": "^6.15.0",
+    "@gravity-ui/uikit": "^7.0.0-beta.5",
     "react": "^16.0.0 || ^17.0.0 || ^18.0.0",
     "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0"
   },
