fix: up typescript to 5.7.3

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "jsx": "react",
     "module": "esnext",
+    "moduleResolution": "Bundler",
     "baseUrl": ".",
     "resolveJsonModule": true,
     "outDir": "build",
