chore: update peer deps

--- a/package.json
+++ b/package.json
@@ -113,8 +113,8 @@
     "@gravity-ui/components": "^4.0.1",
     "@gravity-ui/icons": "^2.2.0",
     "@gravity-ui/uikit": "^7.0.1",
-    "react": "^16.0.0 || ^17.0.0 || ^18.0.0",
-    "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0"
+    "react": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^16.0.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "overrides": {
     "webpack": "^5.88.2"
