--- a/.eslintrc
+++ b/.eslintrc
@@ -27,4 +27,7 @@
         "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
         "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
     },
+    "settings": {
+        "import/core-modules": ["@floating-ui/react"],
+    }
 }
