fix: stabilize CSS Modules mapping and Storybook SCSS config
- Map multi-class tokens in cn utility
- Fix MultipleTooltip CSS and transparency
- Use object classNames in Drawer transitions
- Adjust rollup extractComponentCss plugin and tests
- Update test Next.js app and checklist

# Conflicts:
#	src/components/AsideHeader/components/CompositeBar/MultipleTooltip/MultipleTooltip.tsx
#	src/components/CompositeBar/MultipleTooltip/MultipleTooltip.module.scss

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "types": "build/esm/index.d.ts",
   "sideEffects": [
     "*.css",
-    "*.scss"
+    "*.scss",
+    "**/*.css",
+    "**/*.scss"
   ],
   "files": [
     "build",
