fix: stabilize CSS Modules mapping and Storybook SCSS config
- Map multi-class tokens in cn utility
- Fix MultipleTooltip CSS and transparency
- Use object classNames in Drawer transitions
- Adjust rollup extractComponentCss plugin and tests
- Update test Next.js app and checklist

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lint": "run-p lint:*",
     "packages:check": "knip",
     "build-storybook": "storybook build",
-    "start": "TS_NODE_PROJECT=.storybook/tsconfig.json storybook dev -p 7008",
+    "start": "cross-env TS_NODE_PROJECT=.storybook/tsconfig.json storybook dev -p 7008",
     "prepublishOnly": "npm run build",
     "playwright:install": "playwright install --with-deps",
     "playwright": "playwright test --config=playwright/playwright.config.ts",
@@ -97,6 +97,7 @@
     "@types/react-virtualized-auto-sizer": "^1.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "axe-playwright": "^2.0.3",
+    "cross-env": "^10.0.0",
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-testing-library": "^6.5.0",
