--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "..",
+    "extends": "../tsconfig.json",
     "compilerOptions": {
         "module": "commonjs",
         "target": "ES2017"
