--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,12 @@
 {
     "extends": ["@gravity-ui/stylelint-config", "@gravity-ui/stylelint-config/prettier"],
     "rules": {
-        "declaration-colon-space-after": "always-single-line"
+        "declaration-colon-space-after": "always-single-line",
+        "selector-pseudo-class-no-unknown": [
+            true,
+            {
+                "ignorePseudoClasses": ["global", "local"]
+            }
+        ]
     }
 }
