--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
         "node": true,
         "jest": true,
     },
+    "ignorePatterns": ["**/__testfixtures__/**/*.tsx"],
     "overrides": [
         {
             "files": ["**/__tests__/**/*.[jt]s?(x)", "**/?(*.)+(spec|test).[jt]s?(x)"],
