--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lint:styles": "stylelint '{styles,src}/**/*.scss'",
     "lint:prettier": "prettier --check '**/*.md'",
     "lint": "run-p lint:*",
+    "packages:check": "knip",
     "build-storybook": "storybook build",
     "start": "TS_NODE_PROJECT=.storybook/tsconfig.json storybook dev -p 7008",
     "prepublishOnly": "npm run build",
@@ -88,6 +89,7 @@
     "eslint-plugin-testing-library": "^6.5.0",
     "husky": "^9.1.7",
     "jest": "^28.0.0",
+    "knip": "^5.66.4",
     "nano-staged": "^0.6.0",
     "npm-run-all": "^4.0.0",
     "prettier": "^3.4.2",
