chore: fixes after rebase

--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     ],
     "plugins": ["react-hooks"],
     "rules": {
+        "no-param-reassign": ["error", { "props": true, "ignorePropertyModificationsFor": ["acc", "ref"] }],
         "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
         "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
     },
