--- a/package.json
+++ b/package.json
@@ -51,13 +51,12 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.4",
-    "react-transition-group": "^4.4.5",
-    "tslib": "^2.8.1",
+    "commander": "^11.0.0",
     "jscodeshift": "^0.15.0",
-    "commander": "^11.0.0"
+    "react-transition-group": "^4.4.5",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@types/jscodeshift": "^0.12.0",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
@@ -72,7 +71,7 @@
     "@gravity-ui/prettier-config": "^1.0.0",
     "@gravity-ui/stylelint-config": "^4.0.1",
     "@gravity-ui/tsconfig": "^1.0.0",
-    "@gravity-ui/uikit": "^7.5.1",
+    "@gravity-ui/uikit": "^7.28.0",
     "@jest/globals": "^30.0.5",
     "@playwright/experimental-ct-react": "^1.49.1",
     "@playwright/test": "^1.49.1",
@@ -92,6 +91,8 @@
     "@storybook/test-runner": "^0.17.0",
     "@storybook/theming": "^8.5.0",
     "@svgr/rollup": "^8.1.0",
+    "@types/jest": "^28.1.0",
+    "@types/jscodeshift": "^0.12.0",
     "@types/lodash": "^4.17.14",
     "@types/react": "^18.3.18",
     "@types/react-transition-group": "^4.4.12",
@@ -104,7 +105,6 @@
     "eslint-plugin-testing-library": "^6.5.0",
     "husky": "^9.1.7",
     "jest": "^28.0.0",
-    "@types/jest": "^28.1.0",
     "knip": "^5.66.4",
     "nano-staged": "^0.6.0",
     "npm-run-all": "^4.0.0",
