--- a/package.json
+++ b/package.json
@@ -50,10 +50,8 @@
     "codemod:test:transforms": "jest --config jest.codemods.config.js"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.27.4",
     "commander": "^11.0.0",
     "jscodeshift": "^0.15.0",
-    "react-transition-group": "^4.4.5",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
@@ -61,6 +59,7 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
+    "babel-jest": "^28.0.0",
     "@bem-react/classname": "^1.6.0",
     "@chromatic-com/storybook": "^3.2.4",
     "@commitlint/cli": "^19.6.1",
@@ -84,7 +83,6 @@
     "@storybook/addon-links": "^8.5.0",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.5",
     "@storybook/manager-api": "^8.5.0",
-    "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^8.5.0",
     "@storybook/react-webpack5": "^8.5.0",
     "@storybook/test": "^8.5.0",
@@ -95,11 +93,11 @@
     "@types/jscodeshift": "^0.12.0",
     "@types/lodash": "^4.17.14",
     "@types/react": "^18.3.18",
-    "@types/react-transition-group": "^4.4.12",
     "@types/react-virtualized-auto-sizer": "^1.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "axe-playwright": "^2.0.3",
     "cross-env": "^10.0.0",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-testing-library": "^6.5.0",
@@ -117,9 +115,10 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.93.2",
-    "sass-loader": "^10.5.2",
+    "sass-loader": "^16.0.4",
     "storybook": "^8.5.0",
     "storybook-preset-inline-svg": "^1.0.1",
+    "style-loader": "^4.0.0",
     "stylelint": "^15.11.0",
     "svg-inline-loader": "^0.8.2",
     "ts-jest": "^28.0.0",
