--- a/package.json
+++ b/package.json
@@ -59,9 +59,8 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
-    "babel-jest": "^28.0.0",
     "@bem-react/classname": "^1.6.0",
-    "@chromatic-com/storybook": "^3.2.4",
+    "@chromatic-com/storybook": "^4.1.3",
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@doc-tools/transform": "^3.11.0",
@@ -77,17 +76,12 @@
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-typescript": "^12.1.2",
-    "@storybook/addon-a11y": "^8.5.0",
-    "@storybook/addon-essentials": "^8.5.0",
-    "@storybook/addon-interactions": "^8.5.0",
-    "@storybook/addon-links": "^8.5.0",
+    "@storybook/addon-a11y": "9.1.17",
+    "@storybook/addon-docs": "9.1.17",
+    "@storybook/addon-links": "9.1.17",
     "@storybook/addon-webpack5-compiler-babel": "^3.0.5",
-    "@storybook/manager-api": "^8.5.0",
-    "@storybook/react": "^8.5.0",
-    "@storybook/react-webpack5": "^8.5.0",
-    "@storybook/test": "^8.5.0",
+    "@storybook/react-webpack5": "9.1.17",
     "@storybook/test-runner": "^0.17.0",
-    "@storybook/theming": "^8.5.0",
     "@svgr/rollup": "^8.1.0",
     "@types/jest": "^28.1.0",
     "@types/jscodeshift": "^0.12.0",
@@ -96,6 +90,7 @@
     "@types/react-virtualized-auto-sizer": "^1.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "axe-playwright": "^2.0.3",
+    "babel-jest": "^28.0.0",
     "cross-env": "^10.0.0",
     "css-loader": "^7.1.2",
     "eslint": "^8.57.1",
@@ -116,7 +111,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.93.2",
     "sass-loader": "^16.0.4",
-    "storybook": "^8.5.0",
+    "storybook": "9.1.17",
     "storybook-preset-inline-svg": "^1.0.1",
     "style-loader": "^4.0.0",
     "stylelint": "^15.11.0",
