fix: exclude __tests__ folder from build output

--- a/tsconfig.publish.json
+++ b/tsconfig.publish.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "paths": {}
   },
-  "exclude": ["**/__stories__", "src/**/*.test.ts", "src/**/*.test.tsx", "codemods/**/*.ts", "codemods/**/*.tsx"]
+  "exclude": ["**/__stories__", "**/__tests__", "src/**/*.test.ts", "src/**/*.test.tsx", "codemods/**/*.ts", "codemods/**/*.tsx"]
 }
